melhorando nav, header, e responsividade

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeferson Mendes</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -17,9 +17,33 @@
                 <li> <a href="#">Contato</a></li>
             </ul>
         </nav>
-        <h1 class="site-title">Jeferson Mendes</h1>
-        <h2 class="site-subtitle">Jr. FullStack Developer</h2>
+        <div>
+            <h1 class="site-title">Jeferson Mendes</h1>
+            <h2 class="site-subtitle">Jr. FullStack Developer</h2>
+        </div>
     </header>
+
+    <section>
+        <h2>Portfólio</h2>
+        <figure>
+            <img class="img-portfolio" src="./img/e-commerce.jpg" alt="eCommerce">
+            <figcaption>eCommerce</figcaption>
+        </figure>
+        <figure>
+            <img class="img-portfolio" src="./img/mobileapp.jpg" alt=">Mobile">
+            <figcaption>Mobile</figcaption>
+        </figure>
+        <figure>
+            <img class="img-portfolio" src="./img/webdesign.jpg" alt="Web design">
+            <figcaption>Web design</figcaption>
+        </figure>
+        <figure>
+            <img class="img-portfolio" src="./img/personalproject.jpg"
+                alt="Projetos pessoais">
+            <figcaption>Projetos pessoais</figcaption>
+        </figure>
+    </section>
+
 </body>
 
 </html>
