--- a/index.html
+++ b/index.html
@@ -6,42 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeferson Mendes</title>
     <link rel="stylesheet" href="css/styles.css">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
     <header>
         <nav class="menu">
             <ul>
-                <li> <a href="#">Sobre</a></li>
-                <li> <a href="#">Portifólio</a></li>
-                <li> <a href="#">Contato</a></li>
+                <li>
+                     <a href="#portfolio">Projetos</a>
+                </li>
+                <li>
+                     <a href="#">Sobre</a>
+                </li>
+                <li> 
+                     <a href="#">Contato</a>
+                </li>
             </ul>
         </nav>
         <div>
-            <h1 class="site-title">Jeferson Mendes</h1>
-            <h2 class="site-subtitle">Jr. FullStack Developer</h2>
+            <h1 class="site-title">Jeferson</h1>
+            <h2 class="site-subtitle">jr. FullStack Developer</h2>
+            <h2 class="site-subtitle">"Agora é melhor que nunca."</h2>
         </div>
     </header>
 
-    <section>
-        <h2>Portfólio</h2>
-        <figure>
-            <img class="img-portfolio" src="./img/e-commerce.jpg" alt="eCommerce">
-            <figcaption>eCommerce</figcaption>
-        </figure>
-        <figure>
-            <img class="img-portfolio" src="./img/mobileapp.jpg" alt=">Mobile">
-            <figcaption>Mobile</figcaption>
-        </figure>
-        <figure>
-            <img class="img-portfolio" src="./img/webdesign.jpg" alt="Web design">
-            <figcaption>Web design</figcaption>
-        </figure>
-        <figure>
-            <img class="img-portfolio" src="./img/personalproject.jpg"
-                alt="Projetos pessoais">
-            <figcaption>Projetos pessoais</figcaption>
-        </figure>
+    <section id="portfolio" class="portfolio">
+        <h2>Alguns Projetos</h2>
+
+        <div class="grid">
+            <figure>
+                <img class="img-portfolio" src="./img/nivler.PNG" alt="nivler">
+                <figcaption > <a href="https://www.instagram.com/nivlercursos/">NIVLER CURSOS</a></figcaption>
+                <p>Projeto de cunho Educacional, onde temos como principal foco, encurtar a distância entre alunos e materias de estudos.</p>
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/be-the-hero.PNG" alt=">beTheHero">
+                <figcaption> <a href="https://github.com/Jeferson-Mendes/be-the-hero">BE THE HERO (11 Semana Omnistack)</a></figcaption>
+                <p>Projeto desenvolvido durante a Semana Omnistack 11. Tenho como material de estudo, e principalmente para desavios de melhorias no código.</p>
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/reserva.PNG" alt="reservaLab">
+                <figcaption> <a href="https://github.com/Jeferson-Mendes/RESERVA-LAB">RESERVA LAB</a> </figcaption>
+                <p>Sistema para gerenciamento e reservas de laboratórios.(Nesse usei Python hehe)</p>
+            </figure>
+        </div>
+    </section>
+
+    <section class="sobre">
+        <!-- About me -->
+        <div class="em-breve">EM BREVE</div>
+        <h2>Sobre mim</h2>
+    </section>
+
+    <section class="contato">
+        <div class="em-breve">EM BREVE</div>
+        <h2>Contatos</h2>
     </section>
 
 </body>
