Implementando "Sobre" e "Contatos"

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/f121008c09.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -18,13 +19,13 @@
         <nav class="menu">
             <ul>
                 <li>
-                     <a href="#portfolio">Projetos</a>
+                    <a href="#portfolio">Projetos</a>
                 </li>
                 <li>
-                     <a href="#">Sobre</a>
+                    <a href="#sobre">Sobre</a>
                 </li>
-                <li> 
-                     <a href="#">Contato</a>
+                <li>
+                    <a href="#contato">Contato</a>
                 </li>
             </ul>
         </nav>
@@ -41,31 +42,67 @@
         <div class="grid">
             <figure>
                 <img class="img-portfolio" src="./img/nivler.PNG" alt="nivler">
-                <figcaption > <a href="https://www.instagram.com/nivlercursos/">NIVLER CURSOS</a></figcaption>
-                <p>Projeto de cunho Educacional, onde temos como principal foco, encurtar a distância entre alunos e materias de estudos.</p>
+                <figcaption> <a href="https://www.instagram.com/nivlercursos/">NIVLER CURSOS</a></figcaption>
+                <p>Projeto de cunho Educacional, onde temos como principal foco, encurtar a distância entre alunos e
+                    materias de estudos.</p>
             </figure>
             <figure>
                 <img class="img-portfolio" src="./img/be-the-hero.PNG" alt=">beTheHero">
-                <figcaption> <a href="https://github.com/Jeferson-Mendes/be-the-hero">BE THE HERO (11 Semana Omnistack)</a></figcaption>
-                <p>Projeto desenvolvido durante a Semana Omnistack 11. Tenho como material de estudo, e principalmente para desavios de melhorias no código.</p>
+                <figcaption> <a href="https://github.com/Jeferson-Mendes/be-the-hero">BE THE HERO (11 Semana
+                        Omnistack)</a></figcaption>
+                <p>Projeto desenvolvido durante a Semana Omnistack 11. Tenho como material de estudo, e principalmente
+                    para desafios de melhorias no código.</p>
             </figure>
             <figure>
                 <img class="img-portfolio" src="./img/reserva.PNG" alt="reservaLab">
                 <figcaption> <a href="https://github.com/Jeferson-Mendes/RESERVA-LAB">RESERVA LAB</a> </figcaption>
-                <p>Sistema para gerenciamento e reservas de laboratórios.(Nesse usei Python hehe)</p>
+                <p>Sistema para gerenciamento e reservas de laboratórios.</p>
             </figure>
         </div>
     </section>
 
-    <section class="sobre">
+    <section id="sobre" class="sobre">
         <!-- About me -->
-        <div class="em-breve">EM BREVE</div>
         <h2>Sobre mim</h2>
+        <p class="sobre-text">
+            Apaixonado por Tecnologia, graduando em Sistemas de Infomação pelo Instituto Federal de Educação, Ciência e Tecnologia do Ceará. Desenvolvimento Web, IOT, Engenharia de Software e Empreendedorismo, são temas/áreas em que venho me dedicando ultimamente.
+        </p>
+        <div class="hobby">
+
+            <i class="fas fa-gamepad"></i>
+
+            <i class="fas fa-motorcycle"></i>
+
+            <i class="fas fa-futbol"></i>
+
+            <i class="fas fa-couch"></i>
+
+            <i class="fas fa-music"></i>
+
+        </div>
     </section>
 
-    <section class="contato">
-        <div class="em-breve">EM BREVE</div>
+    <section id="contato" class="contato">
         <h2>Contatos</h2>
+        <div class="grid icons">
+
+            <a target="_blank" href="https://github.com/jeferson-mendes">
+                <i class="fab fa-github"></i>
+            </a>
+
+            <a target="_blank" href="https://www.linkedin.com/in/jeferson-mendes/">
+                <i class="fab fa-linkedin"></i>
+            </a>
+
+            <a href="mailto:jefersonmendes3c@gmail.com">
+                <i class="fas fa-envelope"></i>
+            </a>
+
+            <a href="http://instagram.com/jeffmendes__">
+                <i class="fab fa-instagram"></i>
+            </a>
+
+        </div>
     </section>
 
 </body>
