--- a/index.html
+++ b/index.html
@@ -1,161 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeferson Mendes</title>
-    <link rel="stylesheet" href="css/styles.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
+	<title>Jeferson Mendes</title>
 
-    <script src="https://kit.fontawesome.com/f121008c09.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
-
 <body>
-    <nav class="submenu">
-        <div class="hamburguer">
-            <i class="fas fa-bars"></i>
-        </div>
-        <div class="menuHidden">
-            <ul class="ul-menu">
-                <li>
-                    <a href="#portfolio">Projetos</a>
-                </li>
-                <li>
-                    <a href="#sobre">Sobre</a>
-                </li>
-                <li>
-                    <a href="#contato">Contato</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <header>
-        <nav class="menu">
-            <ul>
-                <li>
-                    <a href="#portfolio">Projetos</a>
-                </li>
-                <li>
-                    <a href="#sobre">Sobre</a>
-                </li>
-                <li>
-                    <a href="#contato">Contato</a>
-                </li>
-            </ul>
-        </nav>
-        <div>
-            <h1 class="site-title">Jeferson</h1>
-            <h2 class="site-subtitle">jr. FullStack Developer</h2>
-            <h2 class="site-subtitle">"Agora é melhor que nunca."</h2>
-        </div>
-    </header>
+	<div class="app">
+		<div class="containerMenuLeft">
+			<div class="arrow"></div>
+			<div class="fieldMenu">
 
-    <section id="portfolio" class="portfolio">
-        <h2>Alguns Projetos</h2>
+				<figure>
+					<img class="img" alt="avatar" src="https://avatars1.githubusercontent.com/u/56761644?s=400&u=1e36f0d0cf39f3f88b2c767b011f63f31510ccf1&v=4">
+				</figure>
+				<div class="options">
+					<ul>
+						<li> <a class="selected beginning" >COMEÇO</a> </li>
+						<li> <a class="skills" >SKILLS</a> </li>
+						<li> <a class="jobs" >PROJETOS</a> </li>
+						<li> <a class="about" >SOBRE</a> </li>
+						<li> <a class="blog" >BLOG</a> </li>
+						<li> <a class="contacts" >CONTATO</a> </li>
+					</ul>
+				</div>
+			</div>
+			<div class="footerMenu">
+				<ul>
+					<li> <a href="http://instagram.com/jeffmendes__"> <img src="./img/instagram.svg" alt="instagram"> </a> </li>
+					<li> <a href="http://github.com/jeferson-mendes"> <img src="./img/github.svg" alt="github"> </a> </li>
+					<li> <a href="http://linkedin.com/in/jeferson-mendes"> <img src="./img/linkedin.svg" alt="linkedin"> </a> </li>
+					<li> <a href="mailto:jefersonmendes3c@gmail.com"> <img src="./img/mail.svg" alt="mail"> </a> </li>
+				</ul>
+			</div>
+		</div>
+		<section class="mainContainer contentFieldMlActive">
+			<div class="personalContainer">
 
-        <div class="grid">
-            <figure>
-                <img class="img-portfolio" src="./img/nivler.PNG" alt="nivler">
-                <figcaption> <a href="https://www.instagram.com/nivlercursos/">NIVLER CURSOS</a></figcaption>
-                <p>Projeto de cunho Educacional, onde temos como principal foco, encurtar a distância entre alunos e
-                    materias de estudos.</p>
-            </figure>
-            <figure>
-                <img class="img-portfolio" src="./img/be-the-hero.PNG" alt=">beTheHero">
-                <figcaption> <a href="https://github.com/Jeferson-Mendes/be-the-hero">BE THE HERO (11 Semana
-                        Omnistack)</a></figcaption>
-                <p>Projeto desenvolvido durante a Semana Omnistack 11. Tenho como material de estudo, e principalmente
-                    para desafios de melhorias no código.</p>
-            </figure>
-            <figure>
-                <img class="img-portfolio" src="./img/reserva.PNG" alt="reservaLab">
-                <figcaption> <a href="https://github.com/Jeferson-Mendes/RESERVA-LAB">RESERVA LAB</a> </figcaption>
-                <p>Sistema para gerenciamento e reservas de laboratórios.</p>
-            </figure>
-        </div>
-    </section>
+				<div class="navigationCircle">
+					<div class="circle activeCircle"></div>
+					<div class="circle"></div>
+					<div class="circle"></div>
+					<div class="circle"></div>
+					<div class="circle"></div>
+					<div class="circle"></div>
+				</div>
 
-    <section id="sobre" class="sobre">
-        <!-- About me -->
-        <h2>Sobre mim</h2>
-        <p class="sobre-text">
-            Apaixonado por Tecnologia, graduando em Sistemas de Infomação pelo Instituto Federal de Educação, Ciência e
-            Tecnologia do Ceará. Desenvolvimento Web, IOT, Engenharia de Software e Empreendedorismo, são temas/áreas em
-            que venho me dedicando ultimamente.
-        </p>
-        <div class="hobby">
+				<div class="apresentation">
+					<figure>
+						<img class="img" alt="person" src="https://avatars1.githubusercontent.com/u/56761644?s=400&u=1e36f0d0cf39f3f88b2c767b011f63f31510ccf1&v=4">
+					</figure>
+					<h1 class="mt hello">Hello, I'm</h1>
+					<h1 class="title">Jeferson Mendes</h1>
+					<p class="description">Apaixonado por Tecnologia e Empreendedorismo, graduando em Sistemas de Informação. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</div>
 
-            <i class="fas fa-gamepad"></i>
+				<div class="apresentation skillsContainer">
 
-            <i class="fas fa-motorcycle"></i>
+					<h1 class="mt hello">SKILLS</h1>
+					<h1 class="title">Em breve...</h1>
 
-            <i class="fas fa-futbol"></i>
+				</div>
 
-            <i class="fas fa-couch"></i>
+				<div class="apresentation projectsContainer">
 
-            <i class="fas fa-music"></i>
+					<h1 class="mt hello">PROJETOS</h1>
+					<h1 class="title">Em breve...</h1>
+				</div>
 
-        </div>
-    </section>
+				<div class="apresentation aboutContainer">
 
-    <section id="contato" class="contato">
-        <h2>Contatos</h2>
-        <div class="grid icons">
+					<h1 class="mt hello">ABOUT</h1>
+					<h1 class="title">Em breve...</h1>
+				</div>
 
-            <a target="_blank" href="https://github.com/jeferson-mendes">
-                <i class="fab fa-github"></i>
-            </a>
+				<div class="apresentation blogContainer">
 
-            <a target="_blank" href="https://www.linkedin.com/in/jeferson-mendes/">
-                <i class="fab fa-linkedin"></i>
-            </a>
+					<h1 class="mt hello">BLOG</h1>
+					<h1 class="title">Em breve...</h1>
+				</div>
 
-            <a href="mailto:jefersonmendes3c@gmail.com">
-                <i class="fas fa-envelope"></i>
-            </a>
+				<div class="apresentation contactContainer">
 
-            <a href="http://instagram.com/jeffmendes__">
-                <i class="fab fa-instagram"></i>
-            </a>
+					<h1 class="mt hello">CONTATOS</h1>
+					<h1 class="title">Em breve...</h1>
+				</div>
+			
+			</div>
+		</section>
+	</div>
 
-        </div>
-    </section>
-
-    <script>
-
-        let hamburguerButton = document.querySelector('.hamburguer');
-        let menu = document.querySelector('.menuHidden');
-        let ulMenu = document.querySelector('.ul-menu');
-
-        hamburguerButton.addEventListener('click', e => {
-            e.preventDefault()
-
-            if (menu.classList.contains('menuHidden')) {
-
-                menu.classList.remove('menuHidden')
-                menu.classList.add('menuNoHidden')
-
-                if (ulMenu.classList.contains('ul-menu')) {
-
-                    ulMenu.classList.remove('ul-menu')
-                    ulMenu.classList.add('.ul-menuBlock')
-                }
-            }
-            else {
-                menu.classList.remove('menuNoHidden')
-                menu.classList.add('menuHidden')
-
-                ulMenu.classList.remove('ul-menuBlock')
-                ulMenu.classList.add('.ul-menu')
-            }
-
-        })
-
-    </script>
+	<script type="text/javascript" src="./index.js"></script>
 </body>
-
 </html>
