--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					
 				</div>
 
-				<div class="apresentation">
+				<div class="apresentation" id="presentation">
 					<figure>
 						<img class="img" alt="person" src="https://avatars1.githubusercontent.com/u/56761644?s=400&u=1e36f0d0cf39f3f88b2c767b011f63f31510ccf1&v=4">
 					</figure>
@@ -57,7 +57,7 @@
 					<p class="description">Apaixonado por Tecnologia e Empreendedorismo, graduando em Sistemas de Informação. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
 
-				<div class="apresentation skillsContainer">
+				<div class="apresentation skillsContainer" id="skills">
 
 					<div class="skills">
 						
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 
-				<div class="apresentation projectsContainer">
+				<div class="apresentation projectsContainer" id="projects">
 					<h1 class="mt hello">This are some projects build by myself</h1>
 					<div class="projectField mt">
 						<div class="projects">
@@ -107,7 +107,7 @@
 
 							<div>
 								<figure>
-									<h1 class="projTitle"> <a class="goToGit" href="https://github.com/Jeferson-Mendes"> Go to GitHub for more </a> </h1>
+									<h1 class="projTitle"> <a class="goToGit" href="https://github.com/Jeferson-Mendes"> See GitHub for more </a> </h1>
 								</figure>
 							</div>
 						</div>
@@ -115,13 +115,13 @@
 				</div>
 
 
-				<div class="apresentation blogContainer">
+				<div class="apresentation blogContainer" id="blog">
 
 					<h1 class="mt hello">BLOG</h1>
 					<h1 class="title">Wait for this...</h1>
 				</div>
 
-				<div class="apresentation contactContainer">
+				<div class="apresentation contactContainer" id="contacts">
 
 					<h1 class="mt hello">FIND ME HERE</h1>
 					<div class="contactField">
